@@ -164,6 +164,10 @@ KallistiOS version 1.3.0 -----------------------------------------------
       previous sends [LS]
 - DC  Rewrote microphone driver to make it support the different encodings
       available to the hardware [LS]
+- DC  Add maple_enum_type_ex function to return the nth device that is of the
+      requested type and supports the list of capabilities listed (i.e, the
+      function_data of devinfo for that function has all the bits set that are
+      set in the cap parameter [LS]
 
 KallistiOS version 1.2.0 -----------------------------------------------
 - DC  Fix to use DCARM7_CFLAGS when compiling ARM driver [Christian Groessler == CG]
